@startuml
class SchoolSystem {
{static} -instance:
- students : List<Student>
- teachers : List<Teacher>
- courses : List<Course>
- journal : List<JournalEntry>
}

abstract class Person {
- name : String
- securityNumber : String
- email : String
- courses : List<Course>
}

class Teacher {
- experienceYear : int
}

class Student {
- classYear : int
}

class JournalEntry {
- course : Course
- grade : Grade
- date : LocalDate
- teacher : Teacher
- student : Student
- comment : String
}

class Course {
- subject : String
}

enum Grade {
 A, B, C, D, E, F,
 NA, ABSENT,
 SPECIAL
}

Teacher --|> Person
Student --|> Person
SchoolSystem --o Course
SchoolSystem --o Teacher
SchoolSystem --o JournalEntry
SchoolSystem --o Student
JournalEntry --* Grade

@enduml